  Bugfixes:
    - Fixed a crash when loading a map that used certain kinds of recipes

---------------------------------------------------------------------------------------------------
Version: 0.18.17
Date: 23. 05. 2020
  Bugfixes:
    - Fixed a crash in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 0.18.16
Date: 22. 05. 2020
  Changes:
    - The 'items/s/machine'-view now also works for fluids
    - The interface now remains open when alt-tabbing or resizing the Factorio window
    - Now allows SI prefixes to be localised
  Bugfixes:
    - Fixed how the mod detects which machines can produce certain recipes in the proper way
    - Fixed that setting hard limits on rocket silo recipes would not work correctly
    - Fixed that migration caused any subfactory that contained fuels to always need repair
    - Fixed that desired products that are also ingredients didn't show up as such at the top level
    - Fixed that fuel would sometimes show up on the top floor as an ingredient when it's already being produced on a subfloor
    - Fixed that recipes with certain complicated product definitions would not be useable

---------------------------------------------------------------------------------------------------
Version: 0.18.15
Date: 20. 05. 2020
  Bugfixes:
    - Fixed a bug where the recipe picker didn't show the appropriate recipes in some cases
    - Fixed that adding recipes which used hidden items would crash
    - Fixed that a recipe would sometimes show as being able to use fluids as ingredients/products, while actually not being able to do so
    - Fixed a crash when alt-tabbing or changing resolution while a popup dialog was open
    - (Probably) fixed a crash when the space science-item is being removed by another mod

---------------------------------------------------------------------------------------------------
Version: 0.18.14
Date: 16. 05. 2020
  Bugfixes: